Calc: spreadsheet protected status: fix misalignment regression
With cbf452b03d71e4ed773e059b83b86af102c473eb all non protected
spreadsheet tabs have their name (tab label) aligned to the top.
  - Fix it but making sure we align to the middle on both coordinates

--- a/browser/css/spreadsheet.css
+++ b/browser/css/spreadsheet.css
@@ -27,6 +27,8 @@
 	font: var(--default-font-size)/1.5 var(--cool-font);
 	display: inline-grid;
 	grid-auto-flow: column;
+	justify-content: center;
+	align-items: center;
 	border: 1px solid transparent;
 	border-radius: var(--border-radius);
 	background: var(--color-main-background);
